--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,13 +21,13 @@ minc_local_deployment_username : '{{ minc_deployment_username }}'
 minc_state   : 'present'
 minc_pkg     : 'minc-toolkit'
 minc_ver     : '1.0.08'
-minc_date    : '20160202'
+minc_date    : '20160205'
 minc_os_fam  : '{{ ansible_os_family }}'     # Debian, MacOSX?, RedHat
 minc_os_dist : '{{ ansible_distribution }}' # Ubuntu, 
 minc_os_rel  : '{{ ansible_release }}'
-minc_github_stable_package_url : 'http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.0.08-20160205-Ubuntu_12.04-x86_64.deb'
-minc_local_resource_directory  : 'sys/sw/ubuntu/12.04/minc-toolkit/1.0.08'
-minc_local_resource_path       : '{{ minc_local_resource_directory }}/minc-toolkit-1.0.08-20160205-Ubuntu_12.04-x86_64.deb'
+minc_github_stable_package_url : 'http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
+minc_local_resource_directory  : 'sys/sw/ubuntu/12.04/minc-toolkit/{{ minc_ver }}'
+minc_local_resource_path       : '{{ minc_local_resource_directory }}/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
 minc_remote_resource_directory : '{{ minc_local_resource_directory }}'
 
 minc_ensure_dirs_on_remote:
@@ -39,7 +39,6 @@ minc_ensure_dirs_on_remote:
     owner          : '{{ minc_remote_deployment_username }}'
     group          : '{{ minc_remote_deployment_username }}'
     mode           : '0755'
-
 
 minc_ensure_dirs_on_local:
 
