added templated environment scripts in /etc/skel to role

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,16 +8,23 @@ dependencies:
   - role: skel
     tags: ['minc', 'skel']
     skel_entries:
+
       - name: 'meta/main.yml entry for /etc/skel/bin'
         path: '/etc/skel/bin'
         mode: '0755'
         state: 'directory' # options are 'directory' or 'absent'
-      - name: 'meta/main.yml entry for /etc/skel/bin'
-        src: 'templates/'
-        path: '/etc/skel/bin/'
-        mode: '0755'
-        state: 'directory' # options are 'directory' or 'absent'
 
+      - name: 'template /etc/skel/bin/minc-toolkit-config.sh'
+        src: 'roles/minc/templates/minc-toolkit-config.sh'
+        path: '/etc/skel/bin/minc-toolkit-config.sh'
+        mode: '0755'
+        state: 'template' # options are 'template' or 'absent'
+
+      - name: 'template /etc/skel/bin/minc-toolkit-conf-{{ minc_ver}}.sh'
+        src: 'roles/minc/templates/versioned-minc-toolkit-config.sh'
+        path: '/etc/skel/bin/minc-toolkit-config-{{ minc_ver }}.sh'
+        mode: '0755'
+        state: 'template' # options are 'template' or 'absent'
 
 galaxy_info:
   author: your name
