made vagrant testing is functional

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,31 +1,28 @@
 ---
 # file: roles/ansible-role-minc_toolkit/defaults/main.yml
 
+project_controller_user     : 'csteel'
+minc_controller_user        : '{{ project_controller_user }}'
+minc_local_deployment_user  : '{{ minc_controller_user }}'
+minc_remote_deployment_user : '{{ minc_deployment_user }}'
+
 # minc
 
-# ansible_distribution_major_version": "14",
-# ansible_distribution_release : "trusty",
-# ansible_distribution_version": "14.04"
-# minc-toolkit-1.9.11-20160202-Debian_7.3-x86_64.deb	
-# minc-toolkit
-# http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.0.08-20160205-Ubuntu_15.04-x86_64.deb
-
-## deployment username
-#
-# 
-
-minc_deployment_username: '<deployment_user>'
-minc_remote_deployment_username : '{{ minc_deployment_username }}'
-minc_local_deployment_username : '{{ minc_deployment_username }}'
-
 minc_state   : 'present'
+
 minc_pkg     : 'minc-toolkit'
 minc_ver     : '1.0.08'
 minc_date    : '20160205'
+
 minc_os_fam  : '{{ ansible_os_family }}'     # Debian, MacOSX?, RedHat
 minc_os_dist : '{{ ansible_distribution }}' # Ubuntu, 
 minc_os_rel  : '{{ ansible_release }}'
+
+# deb
+
 minc_github_stable_package_url : 'http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
+
+
 minc_local_resource_directory  : 'sys/sw/ubuntu/12.04/minc-toolkit/{{ minc_ver }}'
 minc_local_resource_path       : '{{ minc_local_resource_directory }}/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
 minc_remote_resource_directory : '{{ minc_local_resource_directory }}'
@@ -35,9 +32,9 @@ minc_ensure_dirs_on_remote:
   minc_remote_resource_dir:
 
     state          : 'directory'
-    path           : '{{ minc_remote_resource_directory }}'
-    owner          : '{{ minc_remote_deployment_username }}'
-    group          : '{{ minc_remote_deployment_username }}'
+    path           : '{{ minc_local_resource_directory }}'
+    owner          : '{{ minc_remote_deployment_user }}'
+    group          : '{{ minc_remote_deployment_user }}'
     mode           : '0755'
 
   minc_etc_skel_bin:
@@ -48,13 +45,12 @@ minc_ensure_dirs_on_remote:
     group          : 'root'
     mode           : '0755'
 
-
 minc_ensure_dirs_on_local:
 
   minc_local_resource_dir:
 
     state          : 'directory'
     path           : '{{ minc_local_resource_directory }}'
-    owner          : '{{ minc_local_deployment_username }}'
-    group          : '{{ minc_local_deployment_username }}'
+    owner          : '{{ minc_local_deployment_user }}'
+    group          : '{{ minc_local_deployment_user }}'
     mode           : '0755'
