--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,27 +3,30 @@ dependencies:
   - role: ensure_dirs
     tags: ['minc', 'ensure_dirs']
     ensure_dirs_on_remote: '{{ minc_ensure_dirs_on_remote }}'
-    ensure_dirs_on_local : '{{minc_ensure_dirs_on_local }}'
+    ensure_dirs_on_local : '{{ minc_ensure_dirs_on_local }}'
 
   - role: skel
+    become: true
     tags: ['minc', 'skel']
     skel_entries:
 
-      - name: 'meta/main.yml entry for /etc/skel/bin'
-        path: '/etc/skel/bin'
+      - name: "meta/main.yml entry for /etc/skel/bin"
+        path  : '/etc/skel/bin'
+        user  : 'root'
+        group : 'root'
         mode: '0755'
         state: 'directory' # options are 'directory' or 'absent'
 
       - name: 'template /etc/skel/bin/minc-toolkit-config.sh'
-        src: 'roles/minc/templates/minc-toolkit-config.sh'
+        src:  'minc-toolkit-config.sh'
         path: '/etc/skel/bin/minc-toolkit-config.sh'
         mode: '0755'
         state: 'template' # options are 'template' or 'absent'
 
-      - name: 'template /etc/skel/bin/minc-toolkit-conf-{{ minc_ver}}.sh'
-        src: 'roles/minc/templates/versioned-minc-toolkit-config.sh'
-        path: '/etc/skel/bin/minc-toolkit-config-{{ minc_ver }}.sh'
-        mode: '0755'
+      - name:  'template /etc/skel/bin/minc-toolkit-conf-{{ minc_ver}}.sh'
+        src:   'versioned-minc-toolkit-config.sh'
+        path:  '/etc/skel/bin/minc-toolkit-config-{{ minc_ver }}.sh'
+        mode:  '0755'
         state: 'template' # options are 'template' or 'absent'
 
 galaxy_info:
