--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -2,8 +2,13 @@
 - hosts: all
   remote_user: vagrant
   sudo: false
+  pre_tasks:
+    - set_fact: fact_controller_user="{{ lookup('env','USER') }}"
+    - set_fact: fact_controller_home="{{ lookup('env','HOME') }}"
+
+    - debug: var=fact_controller_user
+    - debug: var=fact_controller_home
   vars:
     - minc_deployment_user : 'vagrant'
-    - ansible_user: '{{ mince_deployment_user }}'
   roles:
     - ../../
