--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,27 +21,71 @@
     state: '{{ minc_state }}'
   with_items:
     - wget
+  when: minc_state == 'present'
   tags: [ 'packages', 'utilities' ]
+
+# minc_ver != 1.0.01
 
 ## Gather minc-toolkit resources on remote system
 
 - name: "Download latest stable version of minc toolkit (for ubuntu 12.04) from Github"
   get_url:
-    url: '{{ minc_github_stable_package_url }}'
-    dest: '{{ minc_local_resource_path }}'
+    url: '{{ minc_github_stable_ubuntu_package_url }}'
+    dest: '{{ minc_local_ubuntu_resource_path }}'
+  when: minc_ver != '1.0.01' and minc_state == 'present'
   tags: [ 'packages', 'minc' ]
-
 
 - name: "Install the lastest version of minc toolkit (for Ubuntu 12.04) available on Github"
   become: true
   apt:
-    deb: '{{ minc_local_resource_path }}'
-    state: present
+    deb: '{{ minc_local_ubuntu_resource_path }}'
+    state: 'present'
+  when: minc_ver != '1.0.01' and minc_state == 'present'
   tags: [ 'packages', 'minc' ]
+
+# minc_ver == 1.0.01
+
+- name: "Download latest stable version of minc toolkit (for ubuntu 12.04) from Github"
+  get_url:
+    url: '{{ minc_github_stable_debian_package_url }}'
+    dest: '{{ minc_local_debian_resource_path }}'
+  when: minc_ver == '1.0.01' and minc_state == 'present'
+  tags: [ 'packages', 'minc' ]
+
+- name: "Install the lastest version of minc toolkit (for Ubuntu 12.04) available on Github"
+  become: true
+  apt:
+    deb: '{{ minc_local_debian_resource_path }}'
+    state: 'present'
+  when: minc_ver == '1.0.01' and minc_state == 'present'
+  tags: [ 'packages', 'minc' ]
+
+# any minc version
 
 - name: create versioned minc
   become: true
   command: cp -r /opt/minc /opt/minc-'{{ minc_ver }}' chdir=/ creates=/opt/minc-'{{ minc_ver }}'/bin/mincinfo
+  when: minc_state == 'present'
+
+## removals
+
+- name: "remove minc minc-toolkit"
+  become: true
+  command: dpkg --remove minc-toolkit
+  when: minc_state == 'absent' or minc_state == 'purge'
+  ignore_errors: yes
+
+- name: "remove /opt/minc"
+  become: true
+  command: rm -R /opt/minc
+  when: minc_state == 'absent' or minc_state == 'purge'
+  ignore_errors: yes
+
+- name: "remove /opt/minc/'{{ minc_ver }}'"
+  become: true
+  command: rm -R /opt/minc-'{{ minc_ver }}'
+  when: minc_state == 'absent' or minc_state == 'purge'
+  ignore_errors: yes
 
 # User configuration
 
