made skel dependancy work with testing and production modes

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -59,3 +59,26 @@ minc_ensure_dirs_on_local:
     owner          : '{{ minc_deployment_user }}'
     group          : '{{ minc_deployment_user }}'
     mode           : '0755'
+
+minc_skel_entries:
+
+  - name: "meta/main.yml entry for /etc/skel/bin"
+    path  : '/etc/skel/bin'
+    user  : 'root'
+    group : 'root'
+    mode: '0755'
+    state: 'directory' # options are 'directory' or 'absent'
+
+  - name: "template /etc/skel/bin/minc-toolkit-config.sh"
+    src:  'roles/minc/templates/minc-toolkit-config.sh'
+    path: '/etc/skel/bin/minc-toolkit-config.sh'
+    mode: '0755'
+    state: 'template' # options are 'template' or 'absent'
+
+  - name:  "template /etc/skel/bin/minc-toolkit-conf-{{ minc_ver}}.sh"
+    src:   'roles/minc/templates/versioned-minc-toolkit-config.sh'
+    path:  '/etc/skel/bin/minc-toolkit-config-{{ minc_ver }}.sh'
+    mode:  '0755'
+    state: 'template' # options are 'template' or 'absent'
+
+
