--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -44,7 +44,7 @@
 # http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.0.01-20131211-Debian_7.1-x86_64.deb
 
 # minc_local_resource_path      : '{{ minc_local_resource_directory }}/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
-    - minc_local_resource_directory   : 'sys/sw/ubuntu/12.04/minc-toolkit/{{ minc_ver }}'
+    - minc_local_resource_directory   : 'src/Ubuntu/12.04/minc-toolkit/{{ minc_ver }}'
     - minc_local_ubuntu_resource_path : '{{ minc_local_resource_directory }}/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
     - minc_local_debian_resource_path : '{{ minc_local_resource_directory }}/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Debian_7.1-x86_64.deb'
     - minc_remote_resource_directory  : '{{ minc_local_resource_directory }}'
