--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,14 +1,10 @@
 ---
 # file: roles/ansible-role-minc_toolkit/defaults/main.yml
 
-minc_controller_user        : '{{ fact_controller_user }}'
-minc_deployment_user        : '{{ minc_controller_user }}'
-minc_remote_deployment_user : '{{ minc_deployment_user }}'
-
-# minc
+minc_controller_user : '{{ fact_controller_user }}'
+minc_deployment_user : '{{ project_deployment_user_name }}'
 
 minc_state   : 'present' # 'present', 'absent', 'purge'
-
 minc_pkg     : 'minc-toolkit'
 
 ## Make sure to change the version AND date!
@@ -17,37 +13,34 @@ minc_pkg     : 'minc-toolkit'
 #minc_ver     : '1.0.01'
 #minc_date    : '20131211'
 
-minc_ver     : '1.0.08'
-minc_date    : '20160205'
+#minc_ver     : '1.0.08'
+#minc_date    : '20160205'
+
+minc_ver     : '1.9.15'
+minc_date    : '20170529'
 
 
-# minc_os_fam  : '{{ ansible_os_family }}'     # Debian, MacOSX?, RedHat
-# minc_os_dist : '{{ ansible_distribution }}' # Ubuntu, 
-# minc_os_rel  : '{{ ansible_release }}' # 12.04
 
-# deb
+minc_package_name: 'minc-toolkit-{{ minc_ver }}-{{ minc_date }}-{{ ansible_distribution }}_{{ ansible_distribution_version }}-{{ ansible_architecture }}.deb'
 
-minc_github_stable_ubuntu_package_url : 'http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
-minc_github_stable_debian_package_url : 'http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Debian_7.1-x86_64.deb'
+# fix package name
+minc_github_stable_ubuntu_package_url : 'http://packages.bic.mni.mcgill.ca/minc-toolkit/{{ ansible_os_family }}/{{ minc_package_name }}'
 
-# http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.0.08-20160205-Ubuntu_12.04-x86_64.deb
-# http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.0.01-20131211-Debian_7.1-x86_64.deb
+minc_local_resource_directory   : 'src/sw/{{ ansible_distribution }}/{{ ansible_distribution_version }}/minc-toolkit/{{ minc_ver }}'
+minc_local_resource_path        : '{{ minc_local_resource_directory }}/{{ minc_package_name }}'
 
-
-# minc_local_resource_path      : '{{ minc_local_resource_directory }}/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
-minc_local_resource_directory   : 'src/sw/Ubuntu/12.04/minc-toolkit/{{ minc_ver }}'
-minc_local_ubuntu_resource_path : '{{ minc_local_resource_directory }}/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Ubuntu_12.04-x86_64.deb'
-minc_local_debian_resource_path : '{{ minc_local_resource_directory }}/minc-toolkit-{{ minc_ver }}-{{ minc_date }}-Debian_7.1-x86_64.deb'
 minc_remote_resource_directory  : '{{ minc_local_resource_directory }}'
+minc_remote_resource_path       : '{{ minc_remote_resource_directory }}/{{ minc_package_name }}'
+
 
 minc_ensure_dirs_on_remote:
 
   minc_remote_resource_dir:
 
     state          : 'directory'
-    path           : '{{ minc_local_resource_directory }}'
-    owner          : '{{ minc_remote_deployment_user }}'
-    group          : '{{ minc_remote_deployment_user }}'
+    path           : '{{ minc_remote_resource_directory }}'
+    owner          : '{{ minc_deployment_user }}'
+    group          : '{{ minc_deployment_user }}'
     mode           : '0755'
 
 minc_ensure_dirs_on_local:
@@ -56,8 +49,8 @@ minc_ensure_dirs_on_local:
 
     state          : 'directory'
     path           : '{{ minc_local_resource_directory }}'
-    owner          : '{{ minc_deployment_user }}'
-    group          : '{{ minc_deployment_user }}'
+    owner          : '{{ minc_controller_user }}'
+    group          : '{{ minc_controller_user }}'
     mode           : '0755'
 
 
