fixed src file reference path for vagrant test

--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -79,13 +79,13 @@
         state: 'directory' # options are 'directory' or 'absent'
 
       - name: 'template /etc/skel/bin/minc-toolkit-config.sh'
-        src:  './templates/minc-toolkit-config.sh'
+        src:  '../templates/minc-toolkit-config.sh'
         path: '/etc/skel/bin/minc-toolkit-config.sh'
         mode: '0755'
         state: 'template' # options are 'template' or 'absent'
 
       - name:  'template /etc/skel/bin/minc-toolkit-conf-{{ minc_ver}}.sh'
-        src:   './templates/versioned-minc-toolkit-config.sh'
+        src:   '../templates/versioned-minc-toolkit-config.sh'
         path:  '/etc/skel/bin/minc-toolkit-config-{{ minc_ver }}.sh'
         mode:  '0755'
         state: 'template' # options are 'template' or 'absent'
